--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+.DS_Store
+
 
 find . -size +100M
 find * -size +100M
